# raven-gen

./: .gitignore  README.md  component.py  matrix.py  panel.py  pyproject.toml  rule.py  setup.cfg
src/dataset/: AoT.py  Attribute.py  Rule.py  api.py  attribute.py  build_panel.py  build_tree.py  component.py  configuration.py  const.py  constraints.py  entity.py  main.py  matrix.py  panel.py  rendering.py  rule.py  sampling.py  serialization.py  serialize.py  solver.py
src/raven_gen/: __init__.py  attribute.py  component.py  entity.py  matrix.py  panel.py  rule.py
